--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %} {% block title %} Home {% endblock %} {% block body %}
-<div>
-	<h1 class="text-yellow-100 my-10 text-2xl">Welcome to the home page homie!</h1>
+<div class="max-w-2xl mx-auto">
+	<h1 class="text-yellow-100 my-10 text-2xl">
+		Welcome to the home page homie!
+	</h1>
 	<h3 class="text-yellow-100 mb-6">Website for Learning</h3>
 	<div class="rounded-mid mb-6 bg-gray-400 bg-opacity-15 p-3">
-		<h3 class="mb-3">Objective:</h3>
+		<h3 class="text-yellow-100 mb-3">Objective:</h3>
 		<p>
 			This is going to be a website for learning coding and certain
 			computer science topics mainly just for myself. The idea is to learn
