--- a/site/templates/oop.html
+++ b/site/templates/oop.html
@@ -5,9 +5,11 @@ OOP
 {% endblock %} 
 
 {% block body %}
-<div>
-<h1 class="my-10 text-yellow-100">Object-Oriented Programming</h1>
-
+<div class="max-w-2xl mx-auto mb-10">
+    <div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
+		<a class="hover:text-blue-400" href="{{ url_for("topics") }}">&lt; Back to Topics</a>
+	</div>
+<h1 class="my-10 text-yellow-100 text-2xl">Object-Oriented Programming</h1>
 <h2>Here are the main ideas of OOP:</h2>
 <div class="max-w-2xl mx-auto">
 <ul>
