--- a/site/templates/association.html
+++ b/site/templates/association.html
@@ -1,45 +1,109 @@
-{% extends "base.html" %} 
+{% extends "base.html" %} {% block title %} Association {% endblock %} {% block
+body %}
+<div class="max-w-2xl mx-auto mb-10">
+    <div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
+		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+	</div>
+	<h1 class="my-10 text-yellow-100 text-2xl">Association</h1>
 
-{% block title %}
-Association
-{% endblock %} 
+	<p>Association represents a relationship between two or more objects</p>
+	<h2 class="mt-16 text-yellow-100 text-xl">Key Points:</h2>
+	<div class="text-left">
+		<h3 class="mt-5 text-yellow-100">Definition:</h3>
+		<p>
+			Association is a "using" relationship between two or more objects.
+			It's a way for one objects to interact with another, without
+			necessarily having a strong dependency. For example, a [ Driver ]
+			object might have an association with a [ car ] object, because the
+			driver uses the car
+		</p>
+		<h3 class="mt-5 text-yellow-100">Multiplicity:</h3>
+		<p>
+			Association can be one-to-one, one-to-many, many-to-one, or
+			many-to-many. For example, a [ Teacher ] object and a [ Student ]
+			object could have a many-to-many association, because a teacher can
+			teach many students, and a student can have many teachers.
+		</p>
+		<h3 class="mt-5 text-yellow-100">Directionality:</h3>
+		<p>
+			Association can be unidirectional or bidirectional. In a
+			unidirectional association, one object is aware of another and can
+			interact with it, but not vice versa. In a bidirectional
+			association, both objects are aware of each other.
+		</p>
+		<h3 class="mt-5 text-yellow-100">Navigation:</h3>
+		<p>
+			The direction of the association between two classes is called
+			navigation. It can be either from one class to another or vice
+			versa, or both.
+		</p>
+		<h3 class="mt-5 text-yellow-100">
+			Association vs Aggregation vs Composition:
+		</h3>
+		<p>
+			These are three types of relationships in OOP. Association is the
+			most general, aggregation is a special form of association (a
+			"has-a" relationship, where the child can exist independently of the
+			parent), and composition is a stronger form of aggregation (where
+			the child cannot exist independently of the parent).
+		</p>
+	</div>
+	<h2 class="mt-16 text-yellow-100 text-xl">
+		Examples of Different relationships:
+	</h2>
+	<div class="text-left">
+		<h3 class="mt-10 text-yellow-100">One-To-One Relationship:</h3>
 
-{% block body %}
-<h1 class="topic-title">Association</h1>
-<p class="margin-top">Association represents a relationship between two or more objects</p>
-<p>Some key points:</p>
-<p>Definition: Association is a "using" relationship between two or more objects. It's a way for one objects to interact with another, without necessarily having a strong dependency. For example, a [ Driver ] object might have an association with a [ car ] object, because the driver uses the car</p>
-<p>Multiplicity: Association can be one-to-one, one-to-many, many-to-one, or many-to-many. For example, a [ Teacher ] object and a [ Student ] object could have a many-to-many association, because a teacher can teach many students, and a student can have many teachers.</p>
-<p>Directionality: Association can be unidirectional or bidirectional. In a unidirectional association, one object is aware of another and can interact with it, but not vice versa. In a bidirectional association, both objects are aware of each other.</p>
-<p>Navigation: The direction of the association between two classes is called navigation. It can be either from one class to another or vice versa, or both.</p>
-<p>Association vs Aggregation vs Composition: These are three types of relationships in OOP. Association is the most general, aggregation is a special form of association (a "has-a" relationship, where the child can exist independently of the parent), and composition is a stronger form of aggregation (where the child cannot exist independently of the parent).</p>
-<p class="margin-top">Python Examples:</p>
-<p>one-to-one relationship:</p>
-<pre class="code-box">
+		<pre
+			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+		>
     <code>
-class Car:                      <span class="comment"># define the car class</span>
-    def __init__(self, model):	<span class="comment"># the constructor method for the Car class</span>
-        self.model = model      <span class="comment"># an instance variable 'model' is created and set to the value passed as an argument</span>
-                                                                            
-class Driver:	                <span class="comment"># define driver class</span>
-    def __init__(self, name):   <span class="comment"># the constructor method for the Driver class</span>
-        self.name = name        <span class="comment"># an instance variable 'name' is created and set to the value passed as an argument</span>
-                                                                            
-    def drive(self, car):       <span class="comment"># a method 'drive' that takes a Car instance as an argument</span>
-        print(f"{self.name} is driving a {car.model} car.")	<span class="comment"># prints a message using the 'name' of the Driver instance and the 'model' of the car</span>
-                                        
-car = Car("Toyota")	        <span class="comment"># create a Car instance 'car' with the model "Toyota"</span>
-driver = Driver("John")         <span class="comment"># create a Driver instance 'driver' with the name "John"</span>
-driver.drive(car)	        <span class="comment"># call the 'drive' method on the 'driver' instance, passing in the 'car' instance</span>
+class Car:                      # define the car class
+    def __init__(self, model):	# the constructor method for the Car class
+        self.model = model      # an instance variable 'model' is created and set to the value passed as an argument
+                                                                    
+class Driver:	                # define driver class
+    def __init__(self, name):   # the constructor method for the Driver class
+        self.name = name        # an instance variable 'name' is created and set to the value passed as an argument
+                                                                    
+    def drive(self, car):       # a method 'drive' that takes a Car instance as an argument
+        print(f"{self.name} is driving a {car.model} car.")     # prints a message using the 'name' of the Driver instance and the 'model' of the car
+                                
+car = Car("Toyota")	        # create a Car instance 'car' with the model "Toyota"
+driver = Driver("John")     # create a Driver instance 'driver' with the name "John"
+driver.drive(car)	        # call the 'drive' method on the 'driver' instance, passing in the 'car' instance
     </code>
-</pre>
-<p>In this example, the [ Driver ] class has an association with the [ Car ] class, because it uses a [ Car ] object in its [ drive ] method. This is a one-to-one, unidirectional association.</p>
-<p>This is a one-to-one relationship because one instance of the [ Driver ] class is associated with one instance of the [ Car ] class in the drive method. The [ drive ] method is called on one [ Driver ] instance and takes one [ Car ] instance as an argument.</p>
-<p>It's important to note that this doesn't mean a [ Driver ] can only ever driver one  [ Car ] or vice versa. If you had multiple [ Car ] instances, you could call [ drive ] on the same [ Driver ] with each [ Car ]. But in the context of a single call to [ drive ], it's a one-to-one relationship because one [ Driver ] is driving one [ Car ].</p>
-<p class="margin-top">one-to-many relationship:</p>
-<p>Let's consider a scenario where a Teacher can have many Students. This is a one-to-many relationship because one Teacher is associated with multiple Student instances.</p>
-<pre class="code-box">
-    <code>
+    </pre>
+		<p>
+			In this example, the [ Driver ] class has an association with the [
+			Car ] class, because it uses a [ Car ] object in its [ drive ]
+			method. This is a one-to-one, unidirectional association.
+		</p>
+		<p>
+			This is a one-to-one relationship because one instance of the [
+			Driver ] class is associated with one instance of the [ Car ] class
+			in the drive method. The [ drive ] method is called on one [ Driver
+			] instance and takes one [ Car ] instance as an argument.
+		</p>
+		<p>
+			It's important to note that this doesn't mean a [ Driver ] can only
+			ever driver one [ Car ] or vice versa. If you had multiple [ Car ]
+			instances, you could call [ drive ] on the same [ Driver ] with each
+			[ Car ]. But in the context of a single call to [ drive ], it's a
+			one-to-one relationship because one [ Driver ] is driving one [ Car
+			].
+		</p>
+
+		<h3 class="mt-10 text-yellow-100">One-To-Many Relationship:</h3>
+		<p>
+			Let's consider a scenario where a Teacher can have many Students.
+			This is a one-to-many relationship because one Teacher is associated
+			with multiple Student instances.
+		</p>
+		<pre
+			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+		>
+<code>
 class Student:
     def __init__(self, name):
         self.name = name
@@ -47,7 +111,7 @@ class Student:
 class Teacher:
     def __init__(self, name):
         self.name = name
-        self.students = [] <span class="comment"># this will hold the list of students for the teacher</span>
+        self.students = [] # this will hold the list of students for the teacher
 
     def add_student(self, student):
         self.students.append(student)
@@ -56,94 +120,129 @@ class Teacher:
         for student in self.students:
             print(f"{self.name} is teaching {student.name}.")
 
-<span class="comment"># create some Student instances</span>
+# create some Student instances
 student1 = Student("Alice")
 student2 = Student("Bob")
 student3 = Student("Charlie")
 
-<span class="comment"># create a Teacher instance</span>
+# create a Teacher instance
 teacher = Teacher("Mr. Anderson")
 
-<span class="comment"># add the students to the teacher</span>
+# add the students to the teacher
 teacher.add_student(student1)
 teacher.add_student(student2)
 teacher.add_student(student3)
 
-<span class="comment"># list the students for the teacher</span>
+# list the students for the teacher
 teacher.list_students()
-    </code>
-</pre>
-<p>In this code, the [ Teacher ] class has a method [ add_student ] that takes a [ Student ] instance and adds it to the [ students ] list. The [ list_students ] method then goes through the [ students ] list and prints a message for each one. This demonstrates a one-to-many relationship because one [ Teacher ] is associated with many [ Student ] instances.</p>
-<p class="margin-top">many-to-many relationship:</p>
-<p>A many-to-many relationship occurs when multiple instances of one class are associated with multiple instances of another class. Consider a situation where a Student can enroll in multiple Courses, and a Course can have multiple Students.</p>
-<pre class="code-box">
-    <code>
-class Student:
-    def __init__(self, name):
-        self.name = name
-        self.courses = []   <span class="comment"># this will hold the list of courses for the student</span>
+</code>
+        </pre>
+		<p>
+			In this code, the [ Teacher ] class has a method [ add_student ]
+			that takes a [ Student ] instance and adds it to the [ students ]
+			list. The [ list_students ] method then goes through the [ students
+			] list and prints a message for each one. This demonstrates a
+			one-to-many relationship because one [ Teacher ] is associated with
+			many [ Student ] instances.
+		</p>
+		<h3 class="mt-10 text-yellow-100">Many-To-Many Relationship:</h3>
+		<p>
+			A many-to-many relationship occurs when multiple instances of one
+			class are associated with multiple instances of another class.
+			Consider a situation where a Student can enroll in multiple Courses,
+			and a Course can have multiple Students.
+		</p>
 
-    def enroll(self, course):
-        self.courses.append(course)
-        course.students.append(self)
+		<pre
+			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+		>
+<code>
+class Student:
+	def __init__(self, name):
+		self.name = name
+		self.courses = [] # this will hold the list of courses for the student
+
+	def enroll(self, course):
+		self.courses.append(course)
+		course.students.append(self)
 
 class Course:
-    def __init__(self, name):
-        self.name = name
-        self.students = []  <span class="comment"># this will hold the list of students in the course</span>
+	def __init__(self, name):
+		self.name = name
+		self.students = [] # this will hold the list of students in the course
 
-    def list_students(self):
-        for student in self.students:
-            print(f"{student.name} is enrolled in {self.name}.")
+	def list_students(self):
+		for student in self.students:
+			print(f"{student.name} is enrolled in {self.name}.")
 
-<span class="comment"># create some Course instances</span>
+# create some Course instances
 course1 = Course("Math")
 course2 = Course("English")
 
-<span class="comment"># create some student instances</span>
+# create some student instances
 student1 = Student("Alice")
 student2 = Student("Bob")
 
-<span class="comment"># enroll the students in the courses</span>
+# enroll the students in the courses
 student1.enroll(course1)
 student1.enroll(course2)
 student2.enroll(course1)
 
-<span class="comment"># this the students in the courses</span>
+# this the students in the courses
 course1.list_students()
-course2.list_students()
-    </code>
+course2.list_students()</code>
 </pre>
-<p>In this code, both the [ Student ] and [ Course ] classes have a list to hold their associations (the [ courses ] list in [ Student ] and the [ students ] list in [ Course ]). The [ enroll ] method in [ Student ] adds a [ Course ] to the [ courses ] list an also adds the [ Student ] to the [ students ] list in [ Course ]. This sets up a  many-to-many relationship, because a [ Student ] can be enrolled in many [ Courses ], and a [ Course ] can have many [ Students ].</p>
-<p class="margin-top">many-to-one relationship:</p>
-<p>A many-to-one relationship occurs when multiple instances of one class are associated with a single instance of another class. Consider a situation where a Child has one Mother, but a Mother can have multiple Children.</p>
-<pre class="code-box">
-    <code>
+		<p>
+			In this code, both the [ Student ] and [ Course ] classes have a
+			list to hold their associations (the [ courses ] list in [ Student ]
+			and the [ students ] list in [ Course ]). The [ enroll ] method in [
+			Student ] adds a [ Course ] to the [ courses ] list an also adds the
+			[ Student ] to the [ students ] list in [ Course ]. This sets up a
+			many-to-many relationship, because a [ Student ] can be enrolled in
+			many [ Courses ], and a [ Course ] can have many [ Students ].
+		</p>
+		<h3 class="mt-10 text-yellow-100">Many-To-One Relationship:</h3>
+		<p>
+			A many-to-one relationship occurs when multiple instances of one
+			class are associated with a single instance of another class.
+			Consider a situation where a Child has one Mother, but a Mother can
+			have multiple Children.
+		</p>
+
+		<pre
+			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+		>
+<code>
 class Child:
     def __init__(self, name, mother):
         self.name = name
-        self.mother = mother            <span class="comment"># each child has one mother</span>
-        mother.children.append(self)    <span class="comment"># the mother has another child</span>
+        self.mother = mother            # each child has one mother
+        mother.children.append(self)    # the mother has another child
 
 class Mother:
     def __init__(self, name):
         self.name = name
-        self.children = []      <span class="comment"># this will hold the list of children for the mother</span>
+        self.children = []      # this will hold the list of children for the mother
 
     def list_children(self):
         for child in self.children:
             print(f"{self.name} is the mother of {child.name}.")
 
-<span class="comment"># create a Mother instance</span>
-mother = Mother("Mrs. Smith")
+mother = Mother("Mrs. Smith")       # create a Mother instance
 
-<span class="comment"># create some Child instances</span>
-child1 = Child("Alice", mother)
+child1 = Child("Alice", mother)     # create a Child instance
 child2 = Child("Bob", mother)
 
-<span class="comment"># list the children for the mother</span>
-mother.list_children()
-    </code>
+mother.list_children()              # list the children for the mother
+</code>
 </pre>
-<p>In this code, the [ Mother ] class has a list [ children ] to hold her [ Child ] instances. When a [ Child ] is created, it's given a [ Mother ] instance, and it adds itself to the [ Mother ]s [ children ] list. This sets up a many-to-one relationship, because many [ Children ] are associated with one [ Mother ].</p>
+		<p>
+			In this code, the [ Mother ] class has a list [ children ] to hold
+			her [ Child ] instances. When a [ Child ] is created, it's given a [
+			Mother ] instance, and it adds itself to the [ Mother ]s [ children
+			] list. This sets up a many-to-one relationship, because many [
+			Children ] are associated with one [ Mother ].
+		</p>
+	</div>
+</div>
 {% endblock %}
