--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -7,19 +7,19 @@
 		<link rel="stylesheet" href="{{ url_for("static", filename="style.css",
 		_external=True) }}?{{ time.time() }}">
 	</head>
-	<body class="bg-gradient-to-b from-gray-700 via-gray-800 to-gray-900 min-h-screen">
+	<body
+		class="bg-gradient-to-b from-gray-900 via-gray-850 to-gray-800 min-h-screen"
+	>
 		<div class="flex items-center justify-center mt-8">
 			<nav
-				class="text-white low border border-gray-200 bg-black rounded-mid px-4 py-2 fixed"
+				class="text-yellow-100 low border border-gray-200 bg-black rounded-mid px-4 py-2 fixed"
 			>
-				<a
-					href="{{ url_for('home') }}"
-					class="px-3 text-yellow-100 hover:text-blue-400"
+				<a href="{{ url_for("home") }}" class="px-3 hover:text-blue-400"
 					>Home</a
 				>
 				<a
-					href="{{ url_for('topics') }}"
-					class="px-3 text-yellow-100 hover:text-blue-400"
+					href="{{ url_for("topics") }}"
+					class="px-3 hover:text-blue-400"
 					>Topics</a
 				>
 			</nav>
