--- a/site/templates/composition.html
+++ b/site/templates/composition.html
@@ -1,20 +1,49 @@
-{% extends "base.html" %} 
-
-{% block title %}
-Composition
-{% endblock %} 
-
-{% block body %}
-<h1 class="topic-title">Composition</h1>
-<p class="margin-top">Composition is a design principle in OOP where a class (the "composite" or "parent") is made up of other classes (the "components" or "children"). It represents a "part-of" relationship and is a strong form of aggregation.</p>
-<p>Key points:</p>
-<p>Definition: Composition is a relationship where one class (The composite) contains an instance of  another class (the component). The component is part of the composite. For example, a Car might have an Engine. The car is the whole entity, and the engine is part of the car.</p>
-<p>Dependence: In a composition relationship, the component cannot exist independently of the composite. If the composite is deleted, the component is also deleted. For example, if you deleted a Car object, the Engine object is also deleted because it's part of the car.</p>
-<p>Lifecycle: The lifecycle of the component is managed by the composite. the component is created when the composite is created, and deleted when the composite is deleted.</p>
-<p>Direction: Composition is typically an one-way relationship. The composite knows about the component, but the component does not know about the composite.</p>
-<p class"margin-top">Python example:</p>
-<pre class="code-box">
-    <code>
+{% extends "base.html" %} {% block title %} Composition {% endblock %} {% block
+body %}
+<div class="max-w-2xl mx-auto mb-10">
+    <div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
+		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+	</div>
+	<h1 class="my-10 text-yellow-100 text-2xl">Composition</h1>
+	<p>
+		Composition is a design principle in OOP where a class (the "composite"
+		or "parent") is made up of other classes (the "components" or
+		"children"). It represents a "part-of" relationship and is a strong form
+		of aggregation.
+	</p>
+	<h2 class="mt-16 text-yellow-100 text-xl">Key Points:</h2>
+	<div class="text-left">
+		<h3 class="mt-5 text-yellow-100">Definition:</h3>
+		<p>
+			Composition is a relationship where one class (The composite)
+			contains an instance of another class (the component). The component
+			is part of the composite. For example, a Car might have an Engine.
+			The car is the whole entity, and the engine is part of the car.
+		</p>
+		<h3 class="mt-5 text-yellow-100">Dependence:</h3>
+		<p>
+			In a composition relationship, the component cannot exist
+			independently of the composite. If the composite is deleted, the
+			component is also deleted. For example, if you deleted a Car object,
+			the Engine object is also deleted because it's part of the car.
+		</p>
+		<h3 class="mt-5 text-yellow-100">Lifecycle:</h3>
+		<p>
+			The lifecycle of the component is managed by the composite. the
+			component is created when the composite is created, and deleted when
+			the composite is deleted.
+		</p>
+		<h3 class="mt-5 text-yellow-100">Direction:</h3>
+		<p>
+			Composition is typically an one-way relationship. The composite
+			knows about the component, but the component does not know about the
+			composite.
+		</p>
+		<p class="mb-5 mt-16 text-yellow-100">Example:</p>
+		<pre
+			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+		>
+<code>
 class Engine:
     def __init__(self, type):
         self.type = type
@@ -22,17 +51,27 @@ class Engine:
 class Car:
     def __init__(self, model, engine_type):
         self.model = model
-        self.engine - Engine(engine_type) <span class="comment"># the Car creates an Engine</span>
+        self.engine - Engine(engine_type) # the Car creates an Engine
 
-<span class="comment"># create a Car instance with an Engine</span>
-car = Car("Toyota", "V8")
-    </code>
+car = Car("Toyota", "V8")   # create a Car instance with an Engine
+</code>
 </pre>
-<p>In this example, the [ Car ] class has a composition relationship with the [ Engine ] class. The [ Car ] creates an [ Engine ] when it's created, so the [ Engine ] is part of the  [ Car ] and can't exist independently.</p>
-<p class="margin-top">The key difference between this example and the example dealing with aggregation lies in the lifecycle and dependency of the [ Engine ] object with respect to the [ Car ] object.</p>
-<p class="margin-top">In Aggregation:</p>
-<pre class="code-box">
-    <code>
+		<p class="my-5">
+			In this example, the [ Car ] class has a composition relationship
+			with the [ Engine ] class. The [ Car ] creates an [ Engine ] when
+			it's created, so the [ Engine ] is part of the [ Car ] and can't
+			exist independently.
+		</p>
+		<p class="my-5">
+			The key difference between this example and the example dealing with
+			aggregation lies in the lifecycle and dependency of the [ Engine ]
+			object with respect to the [ Car ] object.
+		</p>
+		<h3 class="mt-10 text-yellow-100">In Aggregation:</h3>
+		<pre
+			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+		>
+<code>
 class Engine:
     def __init__(self, type):
         self.type = type
@@ -40,19 +79,25 @@ class Engine:
 class Car:
     def __init__(self, model, engine):
         self.model = model
-        self.engine = engine    <span class="comment"># the Car has an Engine</span>
+        self.engine = engine    # the Car has an Engine
 
-<span class="comment"># create an Engine instance</span>
-engine = Engine("V8")
+engine = Engine("V8")           # create an Engine instance
 
-<span class="comment"># create a Car instance with the Engine</span>
-car = Car("Toyota", engine)
-    </code>
+car = Car("Toyota", engine)     # create a Car instance with the Engine
+</code>
 </pre>
-<p>The engine instance is created independently of the [ Car ] instance. The [ Car ] instance then takes an existing [ Engine ] instance as a parameter. This means the [ Engine ] can exist without the [ Car ], and if the [ Car ] is deleted, the [ Engine ] continues to exist. This is a characteristic of aggregation.</p>
-<p class="margin-top">In Composition:</p>
-<pre class="code-box">
-    <code>
+		<p>
+			The engine instance is created independently of the [ Car ]
+			instance. The [ Car ] instance then takes an existing [ Engine ]
+			instance as a parameter. This means the [ Engine ] can exist without
+			the [ Car ], and if the [ Car ] is deleted, the [ Engine ] continues
+			to exist. This is a characteristic of aggregation.
+		</p>
+		<h3 class="mt-10 text-yellow-100">In Composition:</h3>
+		<pre
+			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+		>
+<code>
 class Engine:
     def __init__(self, type):
         self.type = type
@@ -60,14 +105,23 @@ class Engine:
 class Car:
     def __init__(self, model, engine_type):
         self.model = model
-        self.engine = Engine(engine_type)   <span class="comment"># the Car creates and Engine</span>
+        self.engine = Engine(engine_type)   # the Car creates and Engine
 
-            <span class="comment"># create a Car instance with an Engine</span>
-car = Car("Toyota", "V8")
-    </code>
+car = Car("Toyota", "V8")       # create a Car instance with an Engine
+</code>
 </pre>
-<p>The [ Car ] instance creates its own [ Engine ] instance when it's constructed. The instance cannot exist without the [ Car ] instance, and if the [ Car ] is deleted, the [ Engine ] is also deleted. This is a characteristic of composition.</p>
-<p>So, the main difference is about the dependency and lifecycle of the [ Engine ] with respect to the [ Car ]. In aggregation, the [ Engine ] can exist independently, while in composition, the [ Engine ] is fully dependent on the [ Car ].</p>
-<p></p>
-<p></p>
-{% endblock %}
+		<p class="my-5">
+			The [ Car ] instance creates its own [ Engine ] instance when it's
+			constructed. The instance cannot exist without the [ Car ] instance,
+			and if the [ Car ] is deleted, the [ Engine ] is also deleted. This
+			is a characteristic of composition.
+		</p>
+		<p class="my-5">
+			So, the main difference is about the dependency and lifecycle of the
+			[ Engine ] with respect to the [ Car ]. In aggregation, the [ Engine
+			] can exist independently, while in composition, the [ Engine ] is
+			fully dependent on the [ Car ].
+		</p>
+		{% endblock %}
+	</div>
+</div>
