--- a/site/templates/inheritance.html
+++ b/site/templates/inheritance.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %} {% block title %} Inheritance {% endblock %} {% block
 body %}
 <div class="max-w-2xl mx-auto">
+	<div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
+		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+	</div>
 	<h1 class="my-10 text-yellow-100 text-2xl">Inheritance</h1>
 	<div class="text-left">
 		<p class="margin-top">
@@ -13,28 +16,28 @@ body %}
 	<h2 class="mt-16 text-yellow-100 text-xl">Key Concepts:</h2>
 	<div class="text-left">
 		<h3 class="mt-5 text-yellow-100">Base Class (Parent Class):</h3>
-		<p>
+		<p class="mt-2">
 			The class whose properties and methods are inherited is known as the
 			base case or parent class.
 		</p>
 		<h3 class="mt-5 text-yellow-100">Derived Class (Child Class):</h3>
-		<p>
+		<p class="mt-2">
 			The class that inherits properties from another class is known as
 			the derived class or child class.
 		</p>
 		<h3 class="mt-5 text-yellow-100">Inheritance Types:</h3>
-		<p>
+		<p class="mt-2">
 			There are several types of inheritance, including single, multiple,
 			multilevel, hierarchical, and hybrid inheritance. The type of
 			inheritance implemented depends on the programming language used.
 		</p>
 		<h3 class="mt-5 text-yellow-100">Method Overriding:</h3>
-		<p>
+		<p class="mt-2">
 			In the derived classes, you can modify the behavior of methods
 			inherited from the base class. This is known as method overriding.
 		</p>
 		<h3 class="mt-5 text-yellow-100">Access Modifiers:</h3>
-		<p>
+		<p class="mt-2">
 			These define the accessibility of the properties and methods of a
 			class. Common access modifiers include public, private, and
 			protected.
@@ -64,7 +67,7 @@ class Cat(Animal):	    # derived class
         return "Meow!"
         </code>
 </pre>
-		<p>
+		<p class="my-5">
 			In this example, [ Dog ] and [ Cat ] classes inherit from the Animal
 			class. Both [ Dog ] and [ Cat ] override the [ speak ] method of
 			Animal. Now, if you create instance of [ Dog ] and [ Cat ] you can
@@ -81,14 +84,16 @@ whiskers = Cat("Whiskers")
 print(whiskers.speak())		# prints "Meow!"
         </code>
 </pre>
-		<p>
+		<p class="my-5">
 			Inheritance allows for more organized and manageable code, making it
 			easier to create and maintain applications. The derived classes have
 			their own methods and can also use the methods of the base class,
 			reducing code duplication.
 		</p>
-		<p class="margin-top">Three more Examples:</p>
-		<p class="margin-top">Using the [ super() ] function:</p>
+	</div>
+	<h2 class="mt-24 text-yellow-100 text-xl">Three more Examples:</h2>
+	<div class="text-left my-10">
+		<h3 class="mb-5 text-yellow-100">Using the [ super() ] function:</h3>
 		<pre
 			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
 		>
@@ -105,7 +110,7 @@ class Dog(Mammal):
 d1 = Dog()
             </code>
 </pre>
-		<p>The output would be:</p>
+		<p class="my-5">The output would be:</p>
 		<pre
 			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
 		>
@@ -114,7 +119,7 @@ d1 = Dog()
 &gt;&gt;Dog is a warm-blooded animal.
         </code>
 </pre>
-		<p>
+		<p class="mt-5">
 			Breakdown: When [ d1 = Dog() ] is executed, it called the [ __init__
 			] method in the dog class. The [ Dog ] classes [ __init__ ] method
 			first prints "Dog has four legs." Then, [ super().__init__("Dog") ]
@@ -122,9 +127,10 @@ d1 = Dog()
 			(the parent class), passing "Dog" as an argument. The mammal classes
 			[ __init__ ] method prints "Dog is a warm-blooded animal."
 		</p>
-		<p class="mt-10">
+		<h3 class="mt-20 text-yellow-100">Multiple Inheritance:</h3>
+		<p class="mt-5">
 			Python supports multiple inheritance, where a class can be derived
-			from more than one base classes:
+			from more than one base classes
 		</p>
 
 		<pre
@@ -148,12 +154,12 @@ print(s.files())	<span class="comment"># prints "Flies in the sky"</span>
         </code>
 </pre>
 
-		<p>
+		<p class="mt-5">
 			In this example, [ Sparrow ] is derived from both [ Animal ] and [
 			Bird ] classes, and inherits methods from both.
 		</p>
-		<p>Method Overriding:</p>
-		<p>
+		<h3 class="mt-20 text-yellow-100">Method Overriding:</h3>
+		<p class="mt-5">
 			In Python, method overriding occurs by simply defining in the child
 			class a method with the same name of a method in the parent class.
 		</p>
@@ -192,23 +198,23 @@ b3.flight()	<span class="comment"># prints "Ostriches cannot fly."</span>
         </code>
 </pre>
 
-		<p>
+		<p class="mt-5">
 			In this example, sparrow and ostrich classes override the flight
 			method of the bird class
 		</p>
-		<p>
+		<p class="mt-5">
 			When [ b1.intro() ] and [ b1.flight() ] are called, it prints "There
 			are many types of birds." and "Most of the birds can fly but come
 			cannot." because [ b1 ] is an instance of the [ Bird ] class.
 		</p>
-		<p>
+		<p class="mt-5">
 			When [ b2.intro ] and [ b1.flight ] are called, it prints "There are
 			many types of birds." and "Sparrows can fly." because b2 is an
 			instance of the sparrow class. The [ intro() ] method is inherited
 			from the [ Bird ] class and the [ flight() ] method is overridden in
 			the [ sparrow ] class.
 		</p>
-		<p class="mt-8 mb-10">
+		<p class="mt-5">
 			When [ b3.into() ] and [ b3.flight() ] are called, it prints "There
 			are many types of birds." and "Ostriches cannot fly." because [ b3 ]
 			is an instance of the [ ostrich ] class. The [ intro() ] method is
